<resources>
    <string name="app_name">Пример2</string>
    <string name="name_in_app" translatable="false">Рассчет расстояния между точками</string>
    <string name="result" translatable="false">Результат</string>
    <string name="first_tchk" translatable="false">1 точка</string>
    <string name="second_tchk" translatable="false">2 точка</string>
    <string name="get_result" translatable="false">Рассчет</string>

</resources>